# PadeOps

problems/: CMakeLists.txt
problems/bolt/: .CMakeLists.txt.swp  CMakeLists.txt  Channel_Node2Cell.F90  channel3D.F90  channelDNS.F90  taylorgreen2D.F90  taylorgreen3D.F90
problems/bolt/channel3D_files/: initialize.F90  temporalHook.F90
problems/bolt/channelDNS_files/: initialize.F90  temporalHook.F90
problems/bolt/taylorgreen2D_files/: initialize.F90  temporalHook.F90
problems/bolt/taylorgreen3D_files/: initialize.F90  temporalHook.F90
problems/postprocessing_igrid/: FV_WM_trial.F90
setup/: SetupEnv_PleiadesNASA_Broadwell_Intel.sh  SetupEnv_PleiadesNASA_Intel.sh  SetupEnv_PleiadesNASA_Skylake_Intel.sh
src/: CMakeLists.txt
src/bolt/: MRT_d3q19_coefficients.F90  d3q19.F90  hooks_interface.F90
src/bolt/BC_code/: NEQ_BB_reg.F90
src/bolt/SGS_code/: Sigma.F90  Smag.F90
src/bolt/collision_code/: BGK.F90  MRT.F90  RegBGK.F90  a.out
src/bolt/conversions_code/: f_to_macro.F90  macro_to_feq.F90
src/bolt/d3q19_codes/: d3q19_init.F90  d3q19_streaming.F90
src/bolt/derivatives/: second_order_collocated.F90
src/bolt/domaindecomp_code/: Decompose_LBM_z.F90  allocate_deallocate.F90
src/bolt/equilibrium_code/: second_order_eq.F90
src/bolt/io_code/: all_io.F90
src/bolt/stats/: bolt_stats.F90
src/incompressible/sgs_models/: sigma.F90
tests/: CMakeLists.txt  test_MRT_MatrixMult.F90  test_d3q19_laminarchannel.F90  test_d3q19_latticedef.F90  test_d3q19_streaming.F90  test_d3q19_uniform.F90  test_d3q19_womersley.F90
tests/test_bolt_files/: d3q19_hooks.F90
(+2 files in other folders)
